--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -6,26 +6,21 @@ on:
       - main
     tags:
       - '*'
+  workflow_dispatch:
 
 jobs:
-  build-binaries:
-    name: ${{ matrix.display_name }}
-    runs-on: ${{ matrix.os }}
+  build-windows:
+    name: Windows
+    runs-on: windows-latest
     if: >-
-      github.event_name == 'push' &&
+      github.event_name == 'workflow_dispatch' ||
       (
-        github.ref_type == 'tag' ||
-        (github.ref == 'refs/heads/main' && matrix.os == 'windows-latest')
+        github.event_name == 'push' &&
+        (
+          github.ref_type == 'tag' ||
+          github.ref == 'refs/heads/main'
+        )
       )
-    strategy:
-      matrix:
-        include:
-          - os: windows-latest
-            display_name: Windows
-            artifact_suffix: windows
-          - os: macos-13
-            display_name: macOS
-            artifact_suffix: macos
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -42,6 +37,7 @@ jobs:
           pip install -r requirements.txt pyinstaller
 
       - name: Build binary with PyInstaller
+        shell: bash
         run: |
           python -m PyInstaller \
             src/nmap_gui/main.py \
@@ -59,5 +55,51 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: rogue-finder-${{ matrix.artifact_suffix }}-${{ github.ref_name }}
+          name: rogue-finder-windows-${{ github.ref_name }}
+          path: upload
+
+  build-macos:
+    name: macOS
+    runs-on: macos-13
+    if: >-
+      github.event_name == 'workflow_dispatch' ||
+      (
+        github.event_name == 'push' &&
+        github.ref_type == 'tag'
+      )
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt pyinstaller
+
+      - name: Build binary with PyInstaller
+        shell: bash
+        run: |
+          python -m PyInstaller \
+            src/nmap_gui/main.py \
+            --name rogue-finder \
+            --noconfirm \
+            --onefile \
+            --windowed
+
+      - name: Normalize artifact layout
+        shell: bash
+        run: |
+          mkdir -p upload
+          cp -R dist upload/
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: rogue-finder-macos-${{ github.ref_name }}
           path: upload
