--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -117,3 +117,44 @@ jobs:
         with:
           name: rogue-finder-macos-${{ github.ref_name }}
           path: upload
+
+  publish-release:
+    name: Publish Release
+    runs-on: ubuntu-latest
+    needs:
+      - build-windows
+      - build-macos
+    if: github.event_name == 'push' && github.ref_type == 'tag'
+    steps:
+      - name: Download Windows artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rogue-finder-windows-${{ github.ref_name }}
+          path: release/windows
+
+      - name: Download macOS artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rogue-finder-macos-${{ github.ref_name }}
+          path: release/macos
+
+      - name: Create archives
+        run: |
+          set -euo pipefail
+          cd release/windows
+          mv upload rogue-finder-windows
+          zip -r ../../rogue-finder-windows-${{ github.ref_name }}.zip rogue-finder-windows
+          cd ../macos
+          mv upload rogue-finder-macos
+          zip -r ../../rogue-finder-macos-${{ github.ref_name }}.zip rogue-finder-macos
+
+      - name: Publish GitHub Release assets
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            rogue-finder-windows-${{ github.ref_name }}.zip
+            rogue-finder-macos-${{ github.ref_name }}.zip
+          tag_name: ${{ github.ref_name }}
+          name: ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
