--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,6 @@ env.PYINSTALLER_CACHE_DIR = "{project_root}/.pyinstaller"
 [tool.ruff]
 target-version = "py311"
 line-length = 100
+
+[tool.ruff.lint]
+extend-select = ["B", "C90", "SIM"]
