--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -49,7 +49,9 @@ jobs:
             --onefile \
             --windowed \
             --uac-admin \
-            --icon assets/icons/rogue-finder.ico
+            --icon assets/icons/rogue-finder.ico \
+            --add-data assets/icons/rogue-finder.ico;assets/icons \
+            --add-data assets/icons/icon_master.png;assets/icons
 
       - name: Normalize artifact layout
         shell: bash
@@ -103,7 +105,9 @@ jobs:
             --noconfirm \
             --onefile \
             --windowed \
-            --icon assets/icons/rogue-finder.icns
+            --icon assets/icons/rogue-finder.icns \
+            --add-data assets/icons/rogue-finder.icns:assets/icons \
+            --add-data assets/icons/icon_master.png:assets/icons
 
       - name: Normalize artifact layout
         shell: bash
