Revert "feat: polish ui and packaging"
This reverts commit 8801a1ffc813bc60fa53a9ff0dae58580625789d.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,7 @@ cmd = """
   --name rogue-finder \
   --noconfirm \
   --onefile \
-  --windowed \
-  --icon assets/icons/rogue-finder.icns \
-  --add-data assets/icons/rogue-finder.icns:assets/icons \
-  --add-data assets/icons/icon_master.png:assets/icons
+  --windowed
 """
 env.PYINSTALLER_CONFIG_DIR = "{project_root}/.pyinstaller"
 env.PYINSTALLER_CACHE_DIR = "{project_root}/.pyinstaller"
