--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -49,9 +49,7 @@ jobs:
             --onefile \
             --windowed \
             --uac-admin \
-            --icon assets/icons/rogue-finder.ico \
-            --add-data assets/icons/rogue-finder.ico;assets/icons \
-            --add-data assets/icons/icon_master.png;assets/icons
+            --icon assets/icons/rogue-finder.ico
 
       - name: Normalize artifact layout
         shell: bash
@@ -105,9 +103,7 @@ jobs:
             --noconfirm \
             --onefile \
             --windowed \
-            --icon assets/icons/rogue-finder.icns \
-            --add-data assets/icons/rogue-finder.icns:assets/icons \
-            --add-data assets/icons/icon_master.png:assets/icons
+            --icon assets/icons/rogue-finder.icns
 
       - name: Normalize artifact layout
         shell: bash
