--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -1,14 +1,15 @@
-name: PyInstaller Builds
+name: Release Builds
 
 permissions:
   contents: write
+  pull-requests: write
 
 on:
   push:
     branches:
       - main
     tags:
-      - '*'
+      - 'v*.*.*'
   workflow_dispatch:
 
 jobs:
@@ -180,3 +181,37 @@ jobs:
           name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  changelog-pr:
+    name: Update Changelog
+    runs-on: ubuntu-latest
+    needs:
+      - publish-release
+    if: github.event_name == 'push' && github.ref_type == 'tag'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install git-cliff
+        uses: taiki-e/install-action@git-cliff
+
+      - name: Generate changelog
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: git cliff -c cliff.toml -o CHANGELOG.md
+
+      - name: Create changelog PR
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "docs: update changelog for ${{ github.ref_name }}"
+          branch: chore/changelog/${{ github.ref_name }}
+          base: main
+          title: "docs: update changelog for ${{ github.ref_name }}"
+          body: |
+            Automated changelog update for `${{ github.ref_name }}`.
+            Triggered from tag `${{ github.ref }}`.
+          add-paths: |
+            CHANGELOG.md
