--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ name: Release Builds
 permissions:
   contents: write
   pull-requests: write
+  pages: write
+  id-token: write
 
 on:
   push:
@@ -13,9 +15,49 @@ on:
   workflow_dispatch:
 
 jobs:
+  coverage:
+    name: Coverage
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Install uv
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install uv
+
+      - name: Install dependencies
+        run: uv pip install --system -r requirements-dev.txt
+
+      - name: Run lint
+        run: poe lint
+
+      - name: Run tests with coverage
+        run: poe test
+
+      - name: Upload coverage HTML artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-html-${{ github.run_id }}
+          path: htmlcov
+
+      - name: Upload coverage Pages artifact
+        if: github.event_name == 'push' && github.ref_type == 'tag'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: htmlcov
+
   build-windows:
     name: Windows
     runs-on: windows-latest
+    needs: coverage
     if: >-
       github.event_name == 'workflow_dispatch' ||
       (
@@ -76,6 +118,7 @@ jobs:
   build-macos:
     name: macOS (arm64)
     runs-on: macos-latest
+    needs: coverage
     if: >-
       github.event_name == 'workflow_dispatch' ||
       (
@@ -181,6 +224,20 @@ jobs:
           name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  deploy-pages:
+    name: Deploy Coverage
+    runs-on: ubuntu-latest
+    needs:
+      - coverage
+    if: github.event_name == 'push' && github.ref_type == 'tag'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
   changelog-pr:
     name: Update Changelog
