--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ name: Release Builds
 permissions:
   contents: write
   pull-requests: write
+  pages: write
+  id-token: write
 
 on:
   push:
@@ -13,9 +15,49 @@ on:
   workflow_dispatch:
 
 jobs:
+  coverage:
+    name: Coverage
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
+
+      - name: Set up Python
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Install uv
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install uv
+
+      - name: Install dependencies
+        run: uv pip install --system -r requirements-dev.txt
+
+      - name: Run lint
+        run: poe lint
+
+      - name: Run tests with coverage
+        run: poe test
+
+      - name: Upload coverage HTML artifact
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: coverage-html-${{ github.run_id }}
+          path: htmlcov
+
+      - name: Upload coverage Pages artifact
+        if: github.event_name == 'push' && github.ref_type == 'tag'
+        uses: actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa # v3.0.1
+        with:
+          path: htmlcov
+
   build-windows:
     name: Windows
     runs-on: windows-latest
+    needs: coverage
     if: >-
       github.event_name == 'workflow_dispatch' ||
       (
@@ -27,10 +69,10 @@ jobs:
       )
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3.11'
           cache: pip
@@ -68,7 +110,7 @@ jobs:
           cp docs/rogue_finder_manual_ja.md upload/manuals/
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: rogue-finder-windows-${{ github.ref_name }}
           path: upload
@@ -76,6 +118,7 @@ jobs:
   build-macos:
     name: macOS (arm64)
     runs-on: macos-latest
+    needs: coverage
     if: >-
       github.event_name == 'workflow_dispatch' ||
       (
@@ -84,10 +127,10 @@ jobs:
       )
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3.11'
           cache: pip
@@ -124,7 +167,7 @@ jobs:
           cp docs/rogue_finder_manual_ja.md upload/manuals/
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: rogue-finder-macos-${{ github.ref_name }}
           path: upload
@@ -138,13 +181,13 @@ jobs:
     if: github.event_name == 'push' && github.ref_type == 'tag'
     steps:
       - name: Download Windows artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
         with:
           name: rogue-finder-windows-${{ github.ref_name }}
           path: release/windows
 
       - name: Download macOS artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
         with:
           name: rogue-finder-macos-${{ github.ref_name }}
           path: release/macos
@@ -172,7 +215,7 @@ jobs:
           zip -r ../../rogue-finder-macos-${{ github.ref_name }}.zip rogue-finder-macos
 
       - name: Publish GitHub Release assets
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@a06a81a03ee405af7f2048a818ed3f03bbf83c7b # v2.5.0
         with:
           files: |
             rogue-finder-windows-${{ github.ref_name }}.zip
@@ -182,6 +225,20 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  deploy-pages:
+    name: Deploy Coverage
+    runs-on: ubuntu-latest
+    needs:
+      - coverage
+    if: github.event_name == 'push' && github.ref_type == 'tag'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e # v4.0.5
+
   changelog-pr:
     name: Update Changelog
     runs-on: ubuntu-latest
@@ -190,12 +247,12 @@ jobs:
     if: github.event_name == 'push' && github.ref_type == 'tag'
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
         with:
           fetch-depth: 0
 
       - name: Install git-cliff
-        uses: taiki-e/install-action@git-cliff
+        uses: taiki-e/install-action@93ceae2e597c99cd0cbe22fe4c781b198c42e93e # git-cliff branch pin
 
       - name: Generate changelog
         env:
@@ -203,7 +260,7 @@ jobs:
         run: git cliff -c cliff.toml -o CHANGELOG.md
 
       - name: Create changelog PR
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c # v6.1.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "docs: update changelog for ${{ github.ref_name }}"
