--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+[project]
+name = "rogue-finder"
+version = "0.0.0"
+requires-python = ">=3.11"
+
 [tool.pytest.ini_options]
 addopts = "--spec"
 testpaths = ["tests"]
