--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ pythonpath = ["src"]
 
 [tool.poe.tasks.test]
 shell = """
-set -euo pipefail
+set -eu
 uv run coverage run -m pytest
 uv run coverage xml
 uv run coverage html
